Add all the methods for both versions
